@@ -1,10 +1,10 @@
 {
-  "count": 67,
-  "uniques": 38,
+  "count": 68,
+  "uniques": 39,
   "clones": [
     {
       "timestamp": "2023-11-10T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -46,6 +46,11 @@
       "timestamp": "2023-11-23T00:00:00Z",
       "count": 37,
       "uniques": 25
+    },
+    {
+      "timestamp": "2023-11-24T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
